Aggiornamenti favicon e server/index.ts

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Interactive 3D Air Pollution Visualization and Information" />
     <title>Air Pollution 3D Visualization</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <style>
       :root {
         --background: 210 40% 98%;
